<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kr.ac.ggu</groupId>
    <artifactId>PdfReader</artifactId>
    <packaging>jar</packaging>
    <version>2021.04-RELEASE</version>

    <name>PdfReader</name>
    <url>https://www.ggu.ac.kr/</url>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <exeFileName>PdfReader</exeFileName>
        <jarFileName>PdfReader-2021.04-RELEASE-jar-with-dependencies.jar</jarFileName>
        <launch4jVersion>2021.04.10.00</launch4jVersion>
    </properties>

    <dependencies>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.7.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.22</version>
            <scope>compile</scope>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.akathist.maven.plugins.launch4j</groupId>-->
<!--            <artifactId>launch4j-maven-plugin</artifactId>-->
<!--            <version>2.1.0</version>-->
<!--        </dependency>-->

    </dependencies>

    <build>
        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
            <plugins>
                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <!-- 의미 모름. 다른 폴더에서 실행하면 클래스 못찾는다고 해서 추가하였음. -->
                <!-- 출처: https://stackoverflow.com/questions/52065010/noclassdeffounderror-while-using-pdfbox-and-building-with-maven/52065609 -->
                <!-- "mvn (clean) compile assembly:single" 명령어 입력하면 jar 파일 잘 생성됨. (동작확인 완료). 출처: https://www.python2.net/questions-105051.htm -->
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <mainClass>kr.ac.ggu.pdfreader.App</mainClass>
                            </manifest>
                        </archive>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.1.0</version>
                <executions>
                    <execution>
                        <id>l4j-clui</id>
                        <phase>package</phase>
                        <goals><goal>launch4j</goal></goals>
                        <configuration>
                            <headerType>console</headerType>
                            <outfile>target/${exeFileName}.exe</outfile>
                            <jar>target/${jarFileName}</jar>
                            <errTitle>encc</errTitle>
                            <classPath>
                                <mainClass>kr.ac.ggu.pdfreader.App</mainClass>
                                <addDependencies>true</addDependencies>
                                <preCp>anything</preCp>
                            </classPath>
                            <jre>
                                <path>${java.home}</path>
                                <minVersion>${maven.compiler.source}</minVersion>
                                <opts>
                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>${launch4jVersion}</fileVersion>
                                <txtFileVersion>${launch4jVersion}</txtFileVersion>
                                <fileDescription>${project.name}</fileDescription>
                                <copyright>MIT</copyright>
                                <productVersion>${launch4jVersion}</productVersion>
                                <txtProductVersion>${launch4jVersion}</txtProductVersion>
                                <productName>${project.name}</productName>
                                <originalFilename>${exeFileName}.exe</originalFilename>
                                <!-- internalName is mandatory -->
                                <internalName>${exeFileName}</internalName>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
